added js code for dynamic components

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="style.css"
+        <link rel="stylesheet" href="style.css">
         <title>Home of Coffee</title>
     </head>
     <body>
@@ -36,5 +36,8 @@
         <li>Coffee</li>
         </ul>
     </footer>
+    <script src="app1.js"></script>
+    <script src="app2.js"></script>
+    <script src="app3.js"></script>
     </body>
 </html>
