--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <link rel="stylesheet" href="style.css">
         <title>Home of Coffee</title>
+        <script src="app1.js"></script>
+        <script src="app2.js"></script>
+        <script src="app3.js"></script>
     </head>
     <body>
         <header>
@@ -14,6 +17,12 @@
         <li>Support</li>
 
 </ul>
+
+            <script>gateKeep()</script>
+            <script>getInfo()</script>
+            
+            <script>tickTock()</script>
+            <script>howManyCups()</script>
 
         </header>
     <main>
@@ -36,8 +45,6 @@
         <li>Coffee</li>
         </ul>
     </footer>
-    <script src="app1.js"></script>
-    <script src="app2.js"></script>
-    <script src="app3.js"></script>
+    
     </body>
 </html>
